--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 </div>
 
 <div class="footer">
-  <p>© Shelley Vohr 2018</p>
-  <p> Made with ❤ and coffee</p>
-  <p>Site code can be found <a class="site-code" target="_blank" href="https://github.com/codebytere/codebytere.github.io">here</a></p>
+  <p>© 2018</p>
+  <p> Made with ❤ a</p>
+  <p>Site code can be found <a class="site-code" target="_blank" href="https://github.com/Saichethan">here</a></p>
 </div>
 
 </body>
