--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <div class="button green"></div>
   </header>
   <div id="terminal">
-    <p><span class="green">\[._.]/</span> - you're in codebytere's cli! type `help` to get started.</p>
+    <p><span class="green"><b>Terminal</b></span> - you're in Saichethan's cli! type `help` to get started.</p>
       <p class="hidden">
         <span class="prompt">
-          <span class="root">root</span>
+          <span class="root">Naruto</span>
           <span class="tick">❯</span>
         </span>
         <span contenteditable="true" class="input"></span>
@@ -29,7 +29,7 @@
 
 <div class="footer">
   <p>© 2018</p>
-  <p> Made with ❤ a</p>
+  <p> Made with ❤ </p>
   <p>Site code can be found <a class="site-code" target="_blank" href="https://github.com/Saichethan">here</a></p>
 </div>
 
