--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <p><span class="green"><b>Terminal</b></span> - you're in Saichethan's cli! type `help` to get started.</p>
       <p class="hidden">
         <span class="prompt">
-          <span class="root">Naruto</span>
+          <span class="root">Saichethan_Reddy</span>
           <span class="tick">❯</span>
         </span>
         <span contenteditable="true" class="input"></span>
